--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.thecosmicgiant.trainer"
+      "package": "com.thecosmicgiant.trainer",
+      "googleServicesFile": "./android/app/google-services.json"
     },
     "web": {
       "bundler": "metro",
@@ -36,9 +37,35 @@
         }
       ],
       "@react-native-firebase/app",
-      "@react-native-firebase/auth",
-      "@react-native-firebase/firestore",
-      "@react-native-firebase/storage"
+      [
+        "@react-native-firebase/auth",
+        {
+          "android": {
+            "providers": ["phone", "google.com", "facebook.com"],
+            "authDomain": "intellect-cosmic.firebaseapp.com"
+          }
+        }
+      ],
+      [
+        "@react-native-firebase/firestore",
+        {
+          "android": {
+            "enablePersistence": true
+          }
+        }
+      ],
+      "@react-native-firebase/storage",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          },
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
